# lista-de-tarefas-FastAPI

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  tarefas.db
